@@ -1,24 +1,25 @@
 package com.weedow.schemaorg.generator.core;
 
-import ch.qos.logback.classic.Level;
-import ch.qos.logback.classic.LoggerContext;
+import com.weedow.schemaorg.commons.model.JsonLdNode;
+import com.weedow.schemaorg.commons.model.JsonLdNodeImpl;
+import com.weedow.schemaorg.commons.model.JsonLdTypeName;
+import com.weedow.schemaorg.generator.core.copy.CopyService;
 import com.weedow.schemaorg.generator.core.filter.SchemaDefinitionFilter;
 import com.weedow.schemaorg.generator.core.handler.ErrorHandler;
 import com.weedow.schemaorg.generator.core.handler.SuccessHandler;
+import com.weedow.schemaorg.generator.core.stream.StreamService;
 import com.weedow.schemaorg.generator.model.Type;
 import com.weedow.schemaorg.generator.template.TemplateService;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -41,6 +42,12 @@ class SchemaModelGeneratorImplTest {
     @Mock
     private Map<String, Type> schemaDefinitions;
 
+    @Mock
+    private CopyService copyService;
+
+    @Mock
+    private StreamService streamService;
+
     @InjectMocks
     private SchemaModelGeneratorImpl schemaModelGenerator;
 
@@ -50,12 +57,14 @@ class SchemaModelGeneratorImplTest {
     }
 
     @Test
-    void generate_without_schema_definitions() throws IOException {
+    void generate_without_schema_definitions() {
         when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Collections.emptyMap());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
+        verifyNoInteractions(streamService);
+        verifyNoInteractions(copyService);
+        verifyNoInteractions(templateService);
     }
 
     @Test
@@ -64,11 +73,17 @@ class SchemaModelGeneratorImplTest {
         when(type.getId()).thenReturn("schema:DataType");
         when(type.getName()).thenReturn("DataType");
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Map.of("schema:DataType", type));
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:DataType", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
+        Path targetDirectory = Paths.get("target", "generated-sources", "schemaorg", "com", "weedow", "schemaorg", "commons", "model");
+        verify(copyService).copy(JsonLdTypeName.class, targetDirectory);
+        verify(copyService).copy(JsonLdNode.class, targetDirectory);
+        verify(copyService).copy(JsonLdNodeImpl.class, targetDirectory);
+
         verify(templateService).apply(
                 "templates/abstract_data_type",
                 options.getDataTypeFolder().resolve("DataType.java"),
@@ -83,15 +98,21 @@ class SchemaModelGeneratorImplTest {
         when(type.getName()).thenReturn("Boolean");
         when(type.getProperties()).thenReturn(Collections.emptySet());
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Map.of("schema:Boolean", type));
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:Boolean", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
+        Path targetDirectory = Paths.get("target", "generated-sources", "schemaorg", "com", "weedow", "schemaorg", "commons", "model");
+        verify(copyService).copy(JsonLdTypeName.class, targetDirectory);
+        verify(copyService).copy(JsonLdNode.class, targetDirectory);
+        verify(copyService).copy(JsonLdNodeImpl.class, targetDirectory);
+
         verify(templateService).apply(
                 "templates/data_type",
                 options.getDataTypeFolder().resolve("Boolean.java"),
-                new Context(type, options.getDataTypePackage(), Set.of("org.schema.model.JsonLdTypeName"))
+                new Context(type, options.getDataTypePackage(), Set.of(JsonLdTypeName.class.getName()))
         );
     }
 
@@ -106,15 +127,21 @@ class SchemaModelGeneratorImplTest {
         when(type.getParents()).thenReturn(List.of(parent));
         when(type.getProperties()).thenReturn(Collections.emptySet());
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Map.of("schema:XPathType", type));
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:XPathType", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
+        Path targetDirectory = Paths.get("target", "generated-sources", "schemaorg", "com", "weedow", "schemaorg", "commons", "model");
+        verify(copyService).copy(JsonLdTypeName.class, targetDirectory);
+        verify(copyService).copy(JsonLdNode.class, targetDirectory);
+        verify(copyService).copy(JsonLdNodeImpl.class, targetDirectory);
+
         verify(templateService).apply(
                 "templates/data_type",
                 options.getDataTypeFolder().resolve("XPathType.java"),
-                new Context(type, options.getDataTypePackage(), Set.of("org.schema.model.JsonLdTypeName"))
+                new Context(type, options.getDataTypePackage(), Set.of(JsonLdTypeName.class.getName()))
         );
     }
 
@@ -127,11 +154,17 @@ class SchemaModelGeneratorImplTest {
         when(type.getEnumerationMembers()).thenReturn(List.of("PotentialActionStatus", "ActiveActionStatus", "FailedActionStatus", "CompletedActionStatus"));
         when(type.getProperties()).thenReturn(Collections.emptySet());
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Map.of("schema:ActionStatusType", type));
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:ActionStatusType", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
+        Path targetDirectory = Paths.get("target", "generated-sources", "schemaorg", "com", "weedow", "schemaorg", "commons", "model");
+        verify(copyService).copy(JsonLdTypeName.class, targetDirectory);
+        verify(copyService).copy(JsonLdNode.class, targetDirectory);
+        verify(copyService).copy(JsonLdNodeImpl.class, targetDirectory);
+
         verify(templateService).apply(
                 "templates/type_interface",
                 options.getModelFolder().resolve("ActionStatusType.java"),
@@ -140,25 +173,23 @@ class SchemaModelGeneratorImplTest {
         verify(templateService).apply(
                 "templates/type_enumeration",
                 options.getModelImplFolder().resolve("ActionStatusTypeEnum.java"),
-                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.ActionStatusType", "org.schema.model.JsonLdTypeName"))
+                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.ActionStatusType", JsonLdTypeName.class.getName()))
         );
     }
 
-    @ParameterizedTest
-    @ValueSource(booleans = {true, false})
-    void generate_type(boolean verboseMode) throws IOException {
-        Level backupLevel = initLogLevel(verboseMode ? Level.DEBUG : null);
-
+    @Test
+    void generate_type() throws IOException {
         final Type type = mock(Type.class);
         when(type.getId()).thenReturn("schema:Thing");
         when(type.getName()).thenReturn("Thing");
         when(type.getProperties()).thenReturn(Collections.emptySet());
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Map.of("schema:Thing", type));
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:Thing", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService);
         verify(templateService).apply(
                 "templates/type_interface",
                 options.getModelFolder().resolve("Thing.java"),
@@ -167,34 +198,44 @@ class SchemaModelGeneratorImplTest {
         verify(templateService).apply(
                 "templates/type_implementation",
                 options.getModelImplFolder().resolve("ThingImpl.java"),
-                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.Thing", "org.schema.model.JsonLdTypeName"))
+                new Context(type, options.getModelImplPackage(), Set.of("org.schema.model.Thing", JsonLdTypeName.class.getName()))
         );
-
-        initLogLevel(verboseMode ? backupLevel : null);
-    }
-
-    private static Level initLogLevel(Level level) {
-        LoggerContext loggerContext = (LoggerContext) LoggerFactory.getILoggerFactory();
-        ch.qos.logback.classic.Logger logger = loggerContext.getLogger("com.weedow.schemaorg");
-        Level currentLevel = logger.getLevel();
-        if (level != null) {
-            logger.setLevel(level);
-        }
-        return currentLevel;
     }
 
     @Test
-    void generate_with_success_handler() throws IOException {
+    void generate_with_success_handler() {
         final SuccessHandler successHandler = mock(SuccessHandler.class);
         options.addSuccessHandler(successHandler);
         final ErrorHandler errorHandler = mock(ErrorHandler.class);
         options.addErrorHandler(errorHandler);
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Collections.emptyMap());
+        final Type type = mock(Type.class);
+        when(type.getId()).thenReturn("schema:Thing");
+        when(type.getName()).thenReturn("Thing");
+        when(type.getProperties()).thenReturn(Collections.emptySet());
+
+        final Path modelFolder = options.getModelFolder();
+        final Path modelImplFolder = options.getModelImplFolder();
+        final String modelPackage = options.getModelPackage();
+        final String modelImplPackage = options.getModelImplPackage();
+
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:Thing", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         schemaModelGenerator.generate();
 
-        verifyCommonTemplates(options, templateService, successHandler);
+        verify(successHandler).onSuccess(
+                "templates/type_interface",
+                modelFolder.resolve("Thing.java"),
+                new Context(type, modelPackage, Collections.emptySet())
+        );
+        verify(successHandler).onSuccess(
+                "templates/type_implementation",
+                modelImplFolder.resolve("ThingImpl.java"),
+                new Context(type, modelImplPackage, Set.of("org.schema.model.Thing", JsonLdTypeName.class.getName()))
+        );
+
         verifyNoInteractions(errorHandler);
     }
 
@@ -205,58 +246,48 @@ class SchemaModelGeneratorImplTest {
         final ErrorHandler errorHandler = mock(ErrorHandler.class);
         options.addErrorHandler(errorHandler);
 
-        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(Collections.emptyMap());
+        final Type type = mock(Type.class);
+        when(type.getId()).thenReturn("schema:Thing");
+        when(type.getName()).thenReturn("Thing");
+        when(type.getProperties()).thenReturn(Collections.emptySet());
+
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:Thing", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
 
         final Path modelFolder = options.getModelFolder();
         final Path modelImplFolder = options.getModelImplFolder();
         final String modelPackage = options.getModelPackage();
         final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
 
         final IOException ioException1 = new IOException();
         doThrow(ioException1).when(templateService).apply(
-                "templates/jsonld_typename",
-                modelFolder.resolve("JsonLdTypeName.java"),
-                new Context(null, modelPackage, Collections.emptySet())
+                "templates/type_interface",
+                modelFolder.resolve("Thing.java"),
+                new Context(type, modelPackage, Collections.emptySet())
         );
         final IOException ioException2 = new IOException();
         doThrow(ioException2).when(templateService).apply(
-                "templates/jsonld_node",
-                modelFolder.resolve("JsonLdNode.java"),
-                new Context(null, modelPackage, Collections.emptySet())
-        );
-        final IOException ioException3 = new IOException();
-        doThrow(ioException3).when(templateService).apply(
-                "templates/jsonld_node_impl",
-                modelImplFolder.resolve("JsonLdNodeImpl.java"),
-                new Context(null, modelImplPackage, Set.of(
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
-                ))
+                "templates/type_implementation",
+                modelImplFolder.resolve("ThingImpl.java"),
+                new Context(type, modelImplPackage, Set.of("org.schema.model.Thing", JsonLdTypeName.class.getName()))
         );
 
         schemaModelGenerator.generate();
 
-        verify(errorHandler).onError("templates/jsonld_typename",
-                modelFolder.resolve("JsonLdTypeName.java"),
-                new Context(null, modelPackage, Collections.emptySet()),
+        verify(errorHandler).onError(
+                "templates/type_interface",
+                modelFolder.resolve("Thing.java"),
+                new Context(type, modelPackage, Collections.emptySet()),
                 ioException1
         );
         verify(errorHandler).onError(
-                "templates/jsonld_node",
-                modelFolder.resolve("JsonLdNode.java"),
-                new Context(null, modelPackage, Collections.emptySet()),
+                "templates/type_implementation",
+                modelImplFolder.resolve("ThingImpl.java"),
+                new Context(type, modelImplPackage, Set.of("org.schema.model.Thing", JsonLdTypeName.class.getName())),
                 ioException2
         );
-        verify(errorHandler).onError(
-                "templates/jsonld_node_impl",
-                modelImplFolder.resolve("JsonLdNodeImpl.java"),
-                new Context(null, modelImplPackage, Set.of(
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
-                )),
-                ioException3
-        );
+
         verifyNoInteractions(successHandler);
     }
 
@@ -314,58 +345,27 @@ class SchemaModelGeneratorImplTest {
         }
     }
 
-    private static void verifyCommonTemplates(GeneratorOptions options, TemplateService templateService) throws IOException {
-        final Path modelFolder = options.getModelFolder();
-        final Path modelImplFolder = options.getModelImplFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
+    @Test
+    void generate_without_common_models_copy() throws IOException {
+        options.setCopyCommonModels(false);
+
+        final Type type = mock(Type.class);
+        when(type.getId()).thenReturn("schema:Boolean");
+        when(type.getName()).thenReturn("Boolean");
+        when(type.getProperties()).thenReturn(Collections.emptySet());
+
+        Map<String, Type> filteredSchemaDefinitions = Map.of("schema:Boolean", type);
+        when(schemaDefinitionFilter.filter(schemaDefinitions, null)).thenReturn(filteredSchemaDefinitions);
+        when(streamService.stream(filteredSchemaDefinitions)).thenReturn(filteredSchemaDefinitions.values().stream());
+
+        schemaModelGenerator.generate();
+
+        verifyNoInteractions(copyService);
 
         verify(templateService).apply(
-                "templates/jsonld_typename",
-                modelFolder.resolve("JsonLdTypeName.java"),
-                new Context(null, modelPackage, Collections.emptySet())
-        );
-        verify(templateService).apply(
-                "templates/jsonld_node",
-                modelFolder.resolve("JsonLdNode.java"),
-                new Context(null, modelPackage, Collections.emptySet())
-        );
-        verify(templateService).apply(
-                "templates/jsonld_node_impl",
-                modelImplFolder.resolve("JsonLdNodeImpl.java"),
-                new Context(null, modelImplPackage, Set.of(
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
-                ))
-        );
-    }
-
-    private static void verifyCommonTemplates(GeneratorOptions options, TemplateService templateService, SuccessHandler successHandler) throws IOException {
-        verifyCommonTemplates(options, templateService);
-
-        final Path modelFolder = options.getModelFolder();
-        final Path modelImplFolder = options.getModelImplFolder();
-        final String modelPackage = options.getModelPackage();
-        final String modelImplPackage = options.getModelImplPackage();
-        final String dataTypePackage = options.getDataTypePackage();
-
-        verify(successHandler).onSuccess("templates/jsonld_typename",
-                modelFolder.resolve("JsonLdTypeName.java"),
-                new Context(null, modelPackage, Collections.emptySet())
-        );
-        verify(successHandler).onSuccess(
-                "templates/jsonld_node",
-                modelFolder.resolve("JsonLdNode.java"),
-                new Context(null, modelPackage, Collections.emptySet())
-        );
-        verify(successHandler).onSuccess(
-                "templates/jsonld_node_impl",
-                modelImplFolder.resolve("JsonLdNodeImpl.java"),
-                new Context(null, modelImplPackage, Set.of(
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_NODE),
-                        SchemaGeneratorUtils.resolveClassName(modelPackage, dataTypePackage, SchemaGeneratorUtils.JSON_LD_TYPE_NAME)
-                ))
+                "templates/data_type",
+                options.getDataTypeFolder().resolve("Boolean.java"),
+                new Context(type, options.getDataTypePackage(), Set.of(JsonLdTypeName.class.getName()))
         );
     }
 }
